Primer commit del tema

--- a/css/style.css
+++ b/css/style.css
@@ -6809,35 +6809,9 @@ progress {
     border-radius: 0;
   }
 }
-#cabecera-site {
-  padding: 70px 0;
-  width: 100%;
-}
-@media (max-width: 991px) {
-  #cabecera-site {
-    padding: 40px 0;
-  }
-}
-
-#cabecera-site.menu-fijo {
-  position: fixed;
-  min-height: 100px;
-  z-index: 101;
-}
-
-.home #identidad, .page-template-template_inicio_padres #identidad {
-  text-align: center;
-}
-
-.home #cabecera-site, .page-template-template_inicio_padres #cabecera-site {
-  position: absolute;
-  left: 0;
-  z-index: 1;
-}
-
 #banner-home {
-  background: url("../images/fondo-banner-home.png") 0 0 no-repeat;
-  padding-top: 380px;
+  background: url("../images/bg-banner.jpg") 0 0 no-repeat;
+  padding-top: 150px;
   position: relative;
 }
 @media (max-width: 991px) {
@@ -6846,673 +6820,9 @@ progress {
     background: none;
   }
 }
-#banner-home #sello-ad {
-  position: absolute;
-  right: 0px;
-  bottom: 10px;
-}
-@media (max-width: 991px) {
-  #banner-home #sello-ad {
-    display: none;
-  }
-}
-#banner-home .right-banner {
-  font-size: 20px;
-  max-width: 450px;
-}
-#banner-home .arrow-down {
-  margin-top: -150px;
-}
-@media (max-width: 991px) {
-  #banner-home .arrow-down {
-    margin-top: -80px;
-  }
-}
-
-.vista-padres #banner-home {
-  padding-top: 270px;
-}
-
-.franja {
-  overflow: hidden;
-}
-.franja .d-flex {
-  transform: translateX(-160em);
-}
-.franja .img {
-  width: 80em;
-  animation: franja 9s infinite linear;
-  margin: 0 20px;
-}
-@keyframes franja {
-  0% {
-    transform: translateX(80em);
-  }
-}
 
 body {
-  background: url("../images/bg-page.jpg") #01566f no-repeat;
-  background-size: 100%;
-  color: #fff;
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.5;
-}
-@media (max-width: 991px) {
-  body {
-    background-size: initial;
-    background-position: center top;
-  }
-}
-
-body.vista-padres {
-  background: url("../images/bg-home-padres.jpg") #01566f no-repeat;
-}
-
-.bg-azul {
-  background-color: #0f2080;
-}
-
-.bg-blanco {
-  background-color: #fff;
-}
-
-.bg-oscuro {
-  background-color: #4c4c4c;
-}
-
-.bg-amarillo {
-  background-color: #deb330;
-}
-
-.bg-rosado {
-  background-color: #ac2e75;
-}
-
-.bg-celeste {
-  background-color: #0099ff;
-}
-
-.bg-verde {
-  background-color: #0facc4;
-}
-
-.bg-negro {
-  background-color: #000;
-}
-
-.bg-naranja {
-  background-color: #d8803a;
-}
-
-.color-azul {
-  color: #0f2080;
-}
-
-.color-blanco {
-  color: #fff;
-}
-
-.color-oscuro {
-  color: #4c4c4c;
-}
-
-.color-amarillo {
-  color: #deb330;
-}
-
-.color-negro {
-  color: #000;
-}
-
-.color-naranja {
-  color: #d8803a;
-}
-
-.seccion-page {
-  padding: 70px 0;
-}
-
-h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
-  font-family: "Montserrat", sans-serif;
-}
-
-h4, .h4 {
-  line-height: 1.5;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.container {
-  max-width: 1150px;
-}
-
-.item-hidden {
-  display: none;
-}
-
-.single {
-  background: url("../images/bg-single.jpg") 0 0/cover no-repeat;
-}
-@media (max-width: 991px) {
-  .single {
-    background-position: -230px top;
-  }
-}
-
-.page-template-template_gracias {
-  background: url("../images/bg-single.jpg") 0 0/cover no-repeat;
-}
-@media (max-width: 991px) {
-  .page-template-template_gracias {
-    background-position: -230px top;
-  }
-}
-
-.single.vista-padres {
-  background: url("../images/bg-internas.jpg") 0 0/cover no-repeat;
-}
-@media (max-width: 991px) {
-  .single.vista-padres {
-    background-position: -230px top;
-  }
-}
-
-.page-template-template_gracias.vista-padres {
-  background: url("../images/bg-single.jpg") 0 0/cover no-repeat;
-}
-@media (max-width: 991px) {
-  .page-template-template_gracias.vista-padres {
-    background-position: -230px top;
-  }
-}
-
-.detalle-item-evento .left-detalle-single .titulo-categoria-eventos {
-  font-size: 14px;
-}
-.detalle-item-evento .left-detalle-single .titulo-categoria-eventos a {
-  background: #4c4c4c;
-  color: #fff;
-  padding: 5px 10px;
-  text-decoration: none;
-}
-.detalle-item-evento .left-detalle-single .titulo-single {
-  color: #fff;
-  font-size: 2.3rem;
-  font-weight: 700;
-  margin-bottom: 40px;
-}
-.detalle-item-evento .left-detalle-single .fecha-novedades {
-  font-size: 22px;
-  font-weight: 600;
-}
-.detalle-item-evento .left-detalle-single .fecha-novedades i {
-  margin-right: 10px;
-}
-.detalle-item-evento .right-detalle-single picture {
-  display: flex;
-}
-@media (min-width: 991px) {
-  .detalle-item-evento .right-detalle-single picture {
-    margin-top: -150px;
-  }
-}
-.detalle-item-evento #slider-ponentes .item-ponente {
-  border-bottom: 2px dashed #fff;
-  border-top: 2px dashed #fff;
-  padding: 25px 0;
-}
-.detalle-item-evento #slider-ponentes .item-ponente .top-ponente {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 25px 0;
-}
-.detalle-item-evento #slider-ponentes .item-ponente .top-ponente figure {
-  width: 155px;
-}
-.detalle-item-evento #slider-ponentes .item-ponente .top-ponente figure img {
-  border: 2px solid #fff;
-  border-radius: 25px;
-}
-.detalle-item-evento #slider-ponentes .item-ponente .top-ponente div.meta-top {
-  padding-left: 40px;
-  width: calc(100% - 160px);
-}
-.detalle-item-evento #slider-ponentes .item-ponente .top-ponente div.meta-top p {
-  font-size: 16px;
-}
-
-.botones-form button {
-  background-color: transparent;
-  border: 2px solid #fff;
-  border-radius: 20px;
-  color: #fff;
-  width: 48%;
-  line-height: 19px;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 8px 15px;
-}
-.botones-form button.active {
-  background-color: #d0774973;
-  border-color: #d07749;
-}
-
-.formulario-evento {
-  background: #ffffff36;
-  padding: 40px;
-  border-radius: 30px;
-  border: 2px solid #fff;
-  margin-top: 40px;
-}
-.formulario-evento #frm-registro {
-  margin-top: 40px;
-}
-.formulario-evento #frm-registro input[type=text], .formulario-evento #frm-registro input[type=tel], .formulario-evento #frm-registro input[type=email], .formulario-evento #frm-registro select {
-  background: #ffffff36;
-  color: #fff;
-  padding: 5px 10px;
-  border-radius: 10px;
-  border: 1px solid #fff;
-  width: 100%;
-}
-.formulario-evento #frm-registro input[type=text]::placeholder, .formulario-evento #frm-registro input[type=tel]::placeholder, .formulario-evento #frm-registro input[type=email]::placeholder, .formulario-evento #frm-registro select::placeholder {
-  color: #fff;
-}
-.formulario-evento #frm-registro select option {
-  background: #0facc4;
-}
-.formulario-evento #frm-registro #btn_submit {
-  background: linear-gradient(90deg, #8f2c77 0%, #0f2080 100%);
-  border-radius: 10px;
-  border: 1px solid #fff;
-  color: #fff;
-  padding: 5px 10px;
-  width: 280px;
-}
-.formulario-evento #frm-registro #appdpdc {
-  font-size: 14px;
-}
-.formulario-evento #frm-registro #appdpdc a {
-  color: #fff;
-}
-.formulario-evento #frm-registro #appdpdc .form-check-inline {
-  display: inline-block;
-  margin: 0 5px;
-}
-
-#asistiran {
-  background: url(../images/fondo-asistiran.png) 0 0/100% 100% no-repeat;
-  font-size: 1.5em;
-  font-weight: 700;
-  margin-top: 50px;
-}
-
-#relacionados .container {
-  max-width: 1320px;
-}
-#relacionados .container .slick-dots {
-  left: 0;
-}
-#relacionados .container .slick-dots li button:before {
-  color: #fff;
-  font-size: 15px;
-  opacity: 1 !important;
-}
-#relacionados .container .slick-dots li.slick-active button:before {
-  color: #deb330;
-  font-size: 15px;
-}
-
-.iframe-block {
-  padding: 5rem 5rem;
-  background: #ffffff3b;
-  border-radius: 30px;
-  border: 2px solid #fff;
-}
-.iframe-block h2.titulo-seccion, .iframe-block .titulo-seccion.h2 {
-  font-size: 3.2rem;
-  font-weight: 900;
-  letter-spacing: 0.5px;
-}
-.iframe-block h2.titulo-seccion span, .iframe-block .titulo-seccion.h2 span {
-  color: #deb330;
-}
-@media (max-width: 991px) {
-  .iframe-block h2.titulo-seccion, .iframe-block .titulo-seccion.h2 {
-    font-size: 2.2rem;
-  }
-}
-@media (max-width: 991px) {
-  .iframe-block {
-    padding: 3rem 2rem;
-  }
-}
-
-/*inicio*/
-@media (min-width: 992px) {
-  #bloque_2_inicio .left-contenido {
-    padding-right: 60px;
-  }
-}
-#bloque_2_inicio .left-contenido h2, #bloque_2_inicio .left-contenido .h2 {
-  color: #ac2e75;
-  font-size: 3.2rem;
-  font-weight: 900;
-  letter-spacing: 0.5px;
-  margin-bottom: 40px;
-}
-#bloque_2_inicio .left-contenido h3, #bloque_2_inicio .left-contenido .h3 {
-  margin: 0;
-  letter-spacing: 1px;
-}
-#bloque_2_inicio .left-contenido h4, #bloque_2_inicio .left-contenido .h4 {
-  font-size: 1em;
-}
-#bloque_2_inicio .left-contenido p {
-  margin-bottom: 40px;
-}
-
-.bloque-de-eventos {
-  position: relative;
-  z-index: 101;
-}
-.bloque-de-eventos .top-eventos {
   background: #fff;
-  position: relative;
-  z-index: 101;
-}
-.bloque-de-eventos .top-eventos h2, .bloque-de-eventos .top-eventos .h2 {
-  font-size: 3.2rem;
-  font-weight: 900;
-  letter-spacing: 0.5px;
-}
-@media (max-width: 991px) {
-  .bloque-de-eventos .top-eventos h2, .bloque-de-eventos .top-eventos .h2 {
-    font-size: 2.6rem;
-    text-align: center;
-  }
-}
-.bloque-de-eventos .top-eventos p {
-  font-weight: 600;
-}
-.bloque-de-eventos .top-eventos .img-top-eventos img {
-  position: absolute;
-  top: -110px;
-}
-@media (max-width: 991px) {
-  .bloque-de-eventos .top-eventos .img-top-eventos {
-    display: none;
-  }
-}
-.bloque-de-eventos .top-eventos .listado-categorias {
-  display: flex;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .content-listado {
-  overflow-x: hidden;
-  overflow-y: auto;
-  height: 90px;
-  padding-left: 50px;
-  padding-right: 50px;
-  width: 100%;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .content-listado .slick-track {
-  display: flex;
-  justify-content: center;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .content-listado .slick-next {
-  right: 0;
-  top: 30%;
-  height: 30px;
-  width: 35px;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .content-listado .slick-next:before {
-  content: url(../images/flecha-filtro-cat.png);
-  display: flex;
-  height: 30px;
-  width: 35px;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .content-listado .slick-prev {
-  left: 0;
-  top: 15%;
-  height: 30px;
-  width: 35px;
-  transform: rotate(180deg);
-}
-.bloque-de-eventos .top-eventos .listado-categorias .content-listado .slick-prev:before {
-  content: url(../images/flecha-filtro-cat.png);
-  display: flex;
-  height: 30px;
-  width: 35px;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .boton-filtro {
-  color: #686868;
-  background: #fff;
-  border: 2px solid;
-  border-radius: 30px;
-  padding: 10px 15px;
-  font-size: 12px;
-  margin: 5px 10px;
-  font-weight: 700;
-  min-width: 180px;
-}
-.bloque-de-eventos .top-eventos .listado-categorias .filtrado {
-  border-color: #04abc6 !important;
-  background: #002191;
-  color: #fff;
-}
-.bloque-de-eventos .bottom-eventos {
-  background: url(../images/bg-proyectos.jpg) 0 250px #fff no-repeat;
-  background-size: 100%;
-  background-position: bottom;
-  position: relative;
-  z-index: 101;
-  position: relative;
-  z-index: 101;
-}
-@media (max-width: 991px) {
-  .bloque-de-eventos .bottom-eventos {
-    background-size: cover;
-  }
-}
-.bloque-de-eventos .bottom-eventos .container {
-  max-width: 1320px;
-}
-.bloque-de-eventos .boton-ver-mas-eventos {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 1.5em;
-  font-weight: 700;
-}
-
-.vista-padres .bloque-de-eventos .bottom-eventos {
-  background: url(../images/bg-eventos-padres.jpg) 0 250px #fff no-repeat;
-}
-
-#beneficios {
-  background: url(../images/bg-beneficios.jpg) 0 0 #fff no-repeat;
-  position: relative;
-}
-#beneficios #iframe-beneficios .item-beneficio .imagen-item-beneficio {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  min-height: 150px;
-}
-#beneficios #iframe-beneficios .item-beneficio .meta-item-beneficio h3, #beneficios #iframe-beneficios .item-beneficio .meta-item-beneficio .h3 {
-  font-size: 1.2em;
-  min-height: 90px;
-}
-#beneficios #iframe-beneficios .item-beneficio .meta-item-beneficio .cta-item-beneficio {
-  border: 2px solid #fff;
-  border-radius: 20px;
-  color: #fff;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 700;
-  padding: 8px 20px;
-  text-decoration: none;
-  width: 230px;
-}
-#beneficios #iframe-beneficios .item-beneficio .meta-item-beneficio .cta-item-beneficio:hover {
-  background-color: #d8803a;
-}
-#beneficios #elipse-beneficios {
-  position: absolute;
-  top: -50px;
-  z-index: 101;
-  left: 0;
-}
-
-.item-evento .contenedor-item {
-  background: #0f2080;
-  border: 3px solid #deb330;
-  border-radius: 20px;
-}
-.item-evento .contenedor-item .resumen-item h4.titulo-categoria-eventos, .item-evento .contenedor-item .resumen-item .titulo-categoria-eventos.h4 {
-  font-size: 10px;
-  background: #4c4c4c;
-  color: #fff;
-  display: inline-block;
-  padding: 5px 10px;
-  text-decoration: none;
-}
-.item-evento .contenedor-item .resumen-item h3, .item-evento .contenedor-item .resumen-item .h3 {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 10px 0;
-  min-height: 60px;
-}
-.item-evento .contenedor-item .resumen-item h3 a, .item-evento .contenedor-item .resumen-item .h3 a {
-  color: #fff;
-  text-decoration: none;
-}
-.item-evento .contenedor-item .resumen-item .fecha-novedades {
-  font-size: 12px;
-}
-.item-evento .contenedor-item .resumen-item .cta-item a {
-  border: 2px solid #fff;
-  border-radius: 20px;
-  color: #fff;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 700;
-  padding: 8px 20px;
-  text-decoration: none;
-  width: 230px;
-}
-.item-evento .contenedor-item .resumen-item .cta-item a:hover {
-  background: #d8803a;
-}
-.item-evento .contenedor-item .imagen-item img {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 80%;
-}
-.item-evento:hover .contenedor-item {
-  background: #ac2e75;
-}
-
-.show {
-  display: initial !important;
-}
-
-.hidden {
-  display: none !important;
-}
-
-.titulo-seccion h2, .titulo-seccion .h2 {
-  font-weight: 600;
-}
-
-#pie-pagina {
-  background: url("../images/bg-footer.jpg") 0 0/cover no-repeat;
-  color: #deb330;
-  position: relative;
-}
-#pie-pagina h2, #pie-pagina .h2 {
-  color: #fff;
-  font-size: 2.3rem;
-  font-weight: 900;
-}
-#pie-pagina h3, #pie-pagina .h3 {
-  font-weight: 700;
-  font-size: 1.3em;
-  margin-bottom: 10px;
-}
-#pie-pagina ul {
-  columns: 2;
-  font-size: 16px;
-  padding-left: 20px;
-}
-@media (max-width: 991px) {
-  #pie-pagina ul {
-    columns: 1;
-  }
-}
-#pie-pagina ul li a {
-  color: #deb330;
-  text-decoration: none;
-}
-#pie-pagina #elipse-footer {
-  position: absolute;
-  right: 50px;
-  top: -70px;
-  z-index: 102;
-}
-@media (max-width: 991px) {
-  #pie-pagina #elipse-footer {
-    display: none;
-  }
-}
-#pie-pagina #elipse-footer-2 {
-  position: absolute;
-  left: 0;
-  top: -70px;
-  z-index: 102;
-}
-@media (max-width: 991px) {
-  #pie-pagina #elipse-footer-2 {
-    display: none;
-  }
-}
-
-.vista-padres #pie-pagina {
-  background: url("../images/bg-footer-padres.jpg") 0 0/cover no-repeat;
-}
-
-#ver-eventos {
-  position: fixed;
-  z-index: 1;
-  top: 250px;
-  right: 50px;
-}
-#ver-eventos .cta-btn {
-  background-color: #8f2c77;
-  border: 2px solid #fff;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 700;
-  text-align: center;
-  height: 120px;
-  padding-top: 36px;
-  line-height: initial;
-  display: inline-block;
-  width: 120px;
-  border-radius: 100px;
-  text-decoration: none;
-  background: linear-gradient(90deg, #8f2c77 0%, #0f2080 100%);
-}
-@media (max-width: 991px) {
-  #ver-eventos {
-    display: none;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
