--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,3 +1,66 @@
-body {
-    
+/*PRIMER BLOQUE HOME*/
+#descripcion-home {
+    .row {
+        justify-content: space-between;
+    }
+}
+
+/*TERCER BLOQUE HOME*/
+#descripcion-bottom-home {
+    h3 {
+        color: $azul;
+        &.espacio-alto {
+            margin-top: 4rem
+        }
+    }
+}
+
+/*BLOQUE DESCUBRE*/
+.slogan {
+    h2 {
+        color: $morado;
+        font-size: 2.8rem;
+        font-weight: 400;
+        margin-bottom: 2rem;
+        strong {
+            font-weight: 600;
+            font-size: 1.2em;
+        }
+    }
+    a {
+        @include button-cta;
+        display: block;
+        margin: 0 auto;
+    }
+}
+
+#colaboramos {
+    h3 {
+        color: $azul;
+        margin-bottom: 2rem;
+    }
+    .slider-colaboramos {
+        .item-slider {
+            align-items: center;
+            display: flex;
+            min-height: 170px;
+            img {
+                display: inline-block;
+                margin: 0 auto;
+            }
+        }
+        .slick-prev {
+            @include arrow-slide;
+            &::before {
+                content: url('../images/left-arrow.png');
+            }
+        }
+
+        .slick-next {
+            @include arrow-slide;
+            &::before {
+                content: url('../images/right-arrow.png');
+            }
+        }
+    }
 }
