--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,16 +4,15 @@
 // Option B: Include parts of Bootstrap
 
 // Required
-$principal: #000;
-$oscuro: #4c4c4c;
-$azul: #0f2080;
+$principal: #808080;
+$morado: #751e89;
 $blanco: #fff;
 $amarillo: #deb330;
 $negro: #000;
-$rosado: #ac2e75;
-$celeste: #0099ff;
-$verde: #0facc4;
-$naranja: #d8803a;
+$rojo: #ff0000;
+$fucsia: rgb(220,11,68);
+$azul: #046aac;
+$celeste: #e6f1f7;
 
 @import "../bootstrap/scss/functions";
 @import "../bootstrap/scss/variables";
@@ -30,10 +29,12 @@ $naranja: #d8803a;
 @import "../bootstrap/scss/utilities/api";
 @import "../bootstrap/scss/modal";
 
+@import "mixin";
 @import "header";
 @import "banner";
 @import "page";
 @import "inicio";
 @import "footer";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
