--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -10,6 +10,10 @@
                 margin: 0 .5rem;
                 a {
                     @include reset-enlace;
+                    &::hover {color: $azul}
+                }
+                &.current-menu-item {
+                    a {color: $azul}
                 }
             }
         }
