--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,8 @@ $rojo: #ff0000;
 $fucsia: rgb(220,11,68);
 $azul: #046aac;
 $celeste: #e6f1f7;
+$oscuro: #4d4d4d;
+$verde: #5aad82;
 
 @import "../bootstrap/scss/functions";
 @import "../bootstrap/scss/variables";
